# weggli-native

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml  install
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  tests.yml
cmake/: utils.cmake  weggli_native-config.cmake.in
demo/: Makefile  demo  demo.c  weggli.h
src/: lib.rs
